dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=aiblockchaind.1
endif

if ENABLE_QT
  dist_man1_MANS+=aiblockchain-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=aiblockchain-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=aiblockchain-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=aiblockchain-wallet.1
endif
endif
